--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ toml = "0.8"
 # Terminal styling
 colored = "2"
 indicatif = "0.17"
+termimad = "0.30"
 
 # Database
 rusqlite = { version = "0.31", features = ["bundled", "modern_sqlite"] }
